--- a/setki/gllacy-index copy.html
+++ b/setki/gllacy-index copy.html
@@ -9,49 +9,47 @@
 <body>
     <header  class="header-container">
     	<div class="container clearfix">
-    	    <div class="main-nav-block">
-    		<a><img class="logo-main" src="" name="logo-main"></a>
-    		<nav class="main-nav clearfix">
-    			<ul class="main-nav">
+    	    <div class="main-nav-block clearfix">
+              <a><img class="logo-main" src="../img/Logo.png" name="Gllacy Shop" alt="Gllacy Shop"></a>
+    		  <nav class="main-nav ">
+    			<ul class="main-nav-list clearfix">
     				<li class="main-nav-item"><a href="">Каталог</a></li>
-    				<ul class="catalog">
-    					<li class="catalog"><a href=""><strong>Новинки</strong></a></li>
-    					<li class="catalog">Сливочное</li>
-    					<li class="catalog">Щербеты</li>
-    					<li class="catalog">Фруктовый лед</li>
-    					<li class="catalog">Мелорин</li>
-    				</ul>
     				<li class="main-nav-item"><a href="">Доставка и оплата</a></li>
-    				<li class="main-nav-item"><a href="">О компании</a></li>
+    				<li class="main-nav-item"><a href="">О Компании</a></li>
     			</ul>
-    		</nav>
+    		  </nav>
+            </div>
     		<div class="user-block">
     		    <div class="search">
-    		    </div>
-    		    <!-- вот это сильно не уверена, что правильно -->
-    		    <div class="user-login">
-    			    </div>
-    		    </div>
-    		    <div class="basket">
-    		    <!-- КАК ДЕЛАТЬ КОРЗИНУ? -->
-    			    	<a href="" class="finalise-order">Оформить заказt</a>
-    			    </div>
-    		    </div>
-    		    <div class="phone-numbers">
-    			    <span>С 10 до 20, ежедневно</span><br>
-    			    <span><strong>8 812 450-25-25</strong></span>
-    		</div>
-    		</div>
+                    <img src="" class="search-pic" alt="">
+                </div>
+                <!-- вот это сильно не уверена, что правильно -->
+                <div class="user-login">
+                    <img src="" class="login-img" alt="">
+                </div>
+                <div class="basket">
+                <!-- КАК ДЕЛАТЬ КОРЗИНУ? -->
+                    <a href=""><img class="empty-basket" src="" alt=""></a>
+                </div>
+                <div class="phone-numbers">
+                    <span class="line-one">С 10 до 20, ежедневно</span><br>
+                    <span class="line-two">8 812 450-25-25</span>
+                </div>
+            </div>
            </div>
+        </div>
+    		    </div>
+    		</div>
     	</div>
     </header>
-    <main class="container">
+
+<main class="container main">
     <!-- СЛАЙДЕР! 
     ?????????
 
   * 4.1 Карусель под шапкой страницы: оживление слайдера. Cмена слайдов мгновенная, без промежуточных переходов. При смене слайдов происходит смена фонового цвета на всей странице (смотрите папку слоёв «Фон» в `gllacy-index.psd`).-->
     <section class="slider-frontpage">
-      <ul class="slider-frontpage">
+      <ul class="">
     	<li class="slide1"><input type="radio" name="slider" id="slider-1" checked>
     	<label for="slider-1"></label>
     	<img src="" class="background1">
@@ -177,22 +175,24 @@
 				<img class="instagram-logo" src="#">
 				<a class="instagram" href="">i</a>
 			</div>
+            <div class="fb">
 				<img class="facebook-logo" src="#">
 				<a class="facebook" href="#">fb</a>
 			</div>
+            <div class="vk">
 				<img class="vk-logo" src="#">
 				<a class="vkontakte" href="#">vk</a>
+            </div>
 		</div>
-			<div class="links-footer">
+		<div class="links-footer">
 				<a class="suppliers" href="" class="suppliers-heart"><img src="" class="heart-img">Для поставщиков</a>
 				<a class="about-production" href="">О производстве</a>
 				<a class="our-documents" href="">Наши документы</a>
 				<a class="eco-standards" href="">Экологические стандарты</a>
-			</div>
-			<div class="developers">
+		</div>
+		<div class="developers">
 				<a href=""><img class="developers-logo" src=""></a>
 				<span>Сделано в HTML Academy (c) 2017</span>
-			</div>
 		</div>
 	</div>
 </footer>
