--- a/setki/gllacy-index copy.html
+++ b/setki/gllacy-index copy.html
@@ -5,6 +5,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="gllacy-index copy.css">
+    <link rel="stylesheet" type="text/css" href="">
+    <style>
+    @font-face {
+        font-family: Roboto-Regular;
+        src: url(../fonts/roboto/Roboto-Regular.ttf);
+    }
+
+    body {
+        font-family: Roboto-Regular;
+    }
+
+    </style>
 </head>
 <body>
     <header  class="header-container">
@@ -13,23 +25,31 @@
               <a><img class="logo-main" src="../img/Logo.png" name="Gllacy Shop" alt="Gllacy Shop"></a>
     		  <nav class="main-nav ">
     			<ul class="main-nav-list clearfix">
-    				<li class="main-nav-item"><a href="">Каталог</a></li>
+    				<li class="main-nav-item catalog"><a href="">Каталог</a></li>
+                      <ul class="pop-down">
+                        <li class="new"><a href="">Новинки</a></li>
+                        <hr>
+                        <li class=""><a href="">Сливочное</a></li>
+                        <li class=""><a href="">Щербеты</a></li>
+                        <li class=""><a href="">Фруктовый лед</a></li>
+                        <li class=""><a href="">Мелорин</a></li>
+                      </ul>
     				<li class="main-nav-item"><a href="">Доставка и оплата</a></li>
     				<li class="main-nav-item"><a href="">О Компании</a></li>
     			</ul>
     		  </nav>
             </div>
-    		<div class="user-block">
+    		<div class="user-block clearfix">
     		    <div class="search">
-                    <img src="" class="search-pic" alt="">
+                    <a><span class="icon icon-search"></span><a>
                 </div>
                 <!-- вот это сильно не уверена, что правильно -->
                 <div class="user-login">
-                    <img src="" class="login-img" alt="">
+                    <a href="" class="icon icon-login"><span>Вход</span></a>
                 </div>
                 <div class="basket">
                 <!-- КАК ДЕЛАТЬ КОРЗИНУ? -->
-                    <a href=""><img class="empty-basket" src="" alt=""></a>
+                    <a href="" class="icon icon-basket"><span>Пусто</span></a>
                 </div>
                 <div class="phone-numbers">
                     <span class="line-one">С 10 до 20, ежедневно</span><br>
